NicBuilder/trunk/source/include/utils.h

#define MAX_ARGC 128
#define MAX_LINE_LENGTH 2048
typedef struct __tag_CArgsA
{
	int argc;
	char * argv[MAX_ARGC];
	int arg_idx[MAX_ARGC];
	char args[MAX_LINE_LENGTH];
}CArgsA;
typedef struct __tag_CArgsW
{
	int argc;
	wchar_t * argv[MAX_ARGC];
	int arg_idx[MAX_ARGC];
	wchar_t args[MAX_LINE_LENGTH];
}CArgsW;
#define CArgs CArgsW
#define CArgs CArgsA
	LIBUTILS_API int UTILS_API 
	parse_arg_exA(
		const char * arg_str,
		CArgsA *,
		char * delimiter=NULL
	);
	LIBUTILS_API int UTILS_API 
	parse_arg_exA(
		const char * arg_str,
		CArgsA *,
		char * delimiter
	);
	/*
    parse_arg_ey 和 parse_arg_ex 不同，在于它将连续出现的分割符号的处理方式不同
    举例来说：
    parse_arg_ex(",,,,,",&args,",");
    得到零个参数，因为strtok将所有的‘,’都忽略了
    而parse_arg_ey(",,,,,",&args,",");
    则得到5个参数，每个参数都是空字符串
	*/
	LIBUTILS_API int UTILS_API  
	parse_arg_eyA(
		const char * arg_str,
		CArgsA * args,
		char * delimiter
	);
	/*
	LIBUTILS_API int UTILS_API utilsArgc;
	LIBUTILS_API char * utilsArgv[MAX_ARGC];
	*/
	
	// ======================= 2) 调试输出TRACE API ===========================
	
	typedef enum TAG_MSG_LEVEL{
		msg_debug=0,
		msg_error=1,
		msg_trace=2
	}MSG_LEVEL;
	
	/*
    these constants control what to output
    the higher the level is, the more message will be
    output
    This mechanism is newer to the old 3-level(debug,error,trace) output
	*/
	
	/* no message will be output */
#define dbg_level_none      0
	/* output fatal error */
#define dbg_level_fatal     1
	/* output non-fatal msg */
#define dbg_level_error     2
	/* output tracing msg */
#define dbg_level_trace     3
	/* everything */
#define dbg_level_verbose   5
extern LIBUTILS_API int (UTILS_API *utils_putsA)(MSG_LEVEL level, char *);
	// ======================= 3) 高精度时间 API ===========================
	
	typedef struct TAG_UTILS_TIME{
		unsigned int lo;
		unsigned int hi;
	}UTILS_TIME;
	/*
    returns time as CPU ticks, requires support of high-performance counter
    in i586 or above, the built-in timer
	*/
	LIBUTILS_API  void   UTILS_API time_mark(UTILS_TIME * t);
	/* return time differences, in seconds */
	LIBUTILS_API  double UTILS_API time_diff(const UTILS_TIME * _t1, const UTILS_TIME * t2);
	
	/* ---------------------------------------------------------------- */
	/* for Win-GUI application, pops up a console window to display debug info. */
	LIBUTILS_API int UTILS_API setup_console_for_log();
	// check if a specified file exists
	LIBUTILS_API int UTILS_API file_existsA(const char * szFile);
	LIBUTILS_API char * UTILS_API 
	get_file_descriptionA(
		const char * szFile, 
		char * szDescription, 
		int len
	);
	/*------------------------------------------------------------------
	| Name: running_as_administrator
	| Desc: checks if user has administrator privileges
	| Notes: This function returns TRUE if the user identifier associated with 
	|   this process is a member of the the Administrators group.
	------------------------------------------------------------------*/
	LIBUTILS_API int UTILS_API running_as_administrator (void);
	// get a file's version string, the file must be PE format.
	LIBUTILS_API char * UTILS_API 
		get_file_versionA(
		const char * szFile,
		/* LARGE_INTEGER */ void * liVersion
		);
	
	LIBUTILS_API int UTILS_API 
	check_runningA(const char * szProgramName);
	LIBUTILS_API int UTILS_API set_runningA(const char * szProgramName);
	// convert text strings like "3345d876" to byte array
	LIBUTILS_API int UTILS_API 
	byte_array_by_hex_string(
		const char * szArray,
		unsigned char * pbArray,
		int * length
	);
	LIBUTILS_API int UTILS_API 
	pattern_matchA(const char * pattern, const char * expression);
	#define  file_exists  file_existsW
	#define  get_file_description  get_file_descriptionW
	#define  get_file_version  get_file_versionW
	#define  parse_arg_ex  parse_arg_exW
	#define  parse_arg_ey  parse_arg_eyW
	#define  pattern_match  pattern_matchW
	#define  utils_puts  utils_putsW
	#define check_running check_runningW
	#define set_running set_runningW
	#define  file_exists  file_existsA
	#define  get_file_description  get_file_descriptionA
	#define  get_file_version  get_file_versionA
	#define  parse_arg_ex  parse_arg_exA
	#define  parse_arg_ey  parse_arg_eyA
	#define  pattern_match  pattern_matchA
	#define  utils_puts  utils_putsA
	#define check_running check_runningA
	#define set_running set_runningA